fix: board page ui and logics
